--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,9 @@
     font-family: Roboto;
     font-size: 16px;
 }
+.link:hover {
+    color: #EF7F04;
+}
 .buttons-list {
     display: flex;
     gap: 14px;
