--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,11 @@
 .container {
     width: 1200px;
     margin: 0 auto;
-
+    max-width: 100%;
+}
+@media (max-width: 1100px) {
+    .container {
+        width: 100%;
+    }
 }
 
