--- a/css/body.css
+++ b/css/body.css
@@ -7,9 +7,19 @@
 }
 .services__block {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     font-family: Roboto;
     flex-wrap: wrap;
     gap: 10px;
+}
+@media (max-width: 1100px) {
+    .services__block {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 38px;
+    }
 }
 .service__item {
     width: 595px;
