--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,23 @@
     align-items: center;
     /*padding: 0 17px;*/
 }
+.logo-burger {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.burger {
+    display: none;
+}
+@media (max-width: 1100px) {
+    .container > nav {
+        display: none;
+    }
+    .burger {
+        display: flex;
+    }
+}
+
 .list {
     display: flex;
     gap: 0 20px;
