Сверстан блок Портфолио, Вопрос-ответ, применет hover к ссылкам и кнопкам, адаптированы блоки

--- a/css/prof-approac.css
+++ b/css/prof-approac.css
@@ -127,6 +127,9 @@ input::placeholder {
     cursor: pointer;
     border-radius: 3px;
 }
+.wrapper:hover {
+    opacity: 0.5;
+}
 .input_wrapper:after {
     content: '';
     position: absolute;
