--- a/css/base.css
+++ b/css/base.css
@@ -1,15 +1,44 @@
-.body {
-    background: #F2F2F2;
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local("Roboto"),
+    local("Roboto-Regular"),
+    url('../fonts/Roboto-Regular.ttf')
+    format("ttf");
+}
+
+/* cyrillic */
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local("Roboto"),
+    local("Roboto-Bold"),
+    url('../fonts/Roboto-Bold.ttf')
+    format("ttf");
+}
+
+body {
     font-family: 'Roboto', sans-serif;
 }
 .container {
-    width: 1200px;
+    display: flex;
     margin: 0 auto;
     max-width: 100%;
 }
-@media (max-width: 1100px) {
+/*992 - работает*/
+@media (max-width: 992px) and  (min-width: 541px) {
     .container {
         width: 100%;
     }
 }
-
+/*адаптация для 540px не работает, блок info не выравнивается под фото*/
+@media (max-width: 540px) {
+    .container {
+        width: 100%;
+        display: block;
+    }
+}
