--- a/css/body.css
+++ b/css/body.css
@@ -1,5 +1,5 @@
 .info {
-    background-image: url("../images/fon.jpg");
+    /*background-image: url("../images/fon.jpg");*/
     padding: 15px 70px;
 }
 .info-feedback {
