--- a/css/body.css
+++ b/css/body.css
@@ -102,6 +102,10 @@
     font-weight: 500;
     padding-top: 50px;
 }
+.info-about-me p {
+    text-indent: 24px;
+    padding-top: 10px;
+}
 .info__input {
     display: flex;
     padding-top: 50px;
@@ -139,7 +143,74 @@ input::placeholder {
 .info__button:active {
     background-color: #1E1E1E;
 }
-
+@media (max-width: 1500px) {
+    .info-title {
+        font-size: 40px;
+    }
+    .info-city {
+        font-size: 22px;
+    }
+    .info-stack {
+        color: #121212;
+        font-size: 28px;
+        line-height: 26px;
+        padding: 40px 0 20px;
+    }
+    .info-about-me h2 {
+        font-size: 28px;
+        font-weight: 500;
+    }
+    .info-about-me p {
+        text-indent: 24px;
+        font-size: 28px;
+    }
+    .info__input__item {
+        font-size: 30px;
+    }
+    .info__button {
+        font-size: 30px;
+        margin-top: 30px;
+    }
+}
+@media (max-width: 1200px) {
+    .info-title {
+        font-size: 36px;
+    }
+    .info-city {
+        font-size: 24px;
+        padding-top: 15px;
+    }
+    .info-media__list {
+        padding-top: 30px;
+    }
+    .info-stack {
+        color: #121212;
+        font-size: 26px;
+        padding: 25px 0 15px;
+    }
+    .info-about-me {
+        font-size: 26px;
+        line-height: 26px;
+        font-weight: 500;
+        padding-top: 30px;
+    }
+    .info-about-me h2 {
+        font-weight: 500;
+    }
+    .info-about-me p {
+        text-indent: 24px;
+    }
+    .info__input {
+        padding-top: 30px;
+    }
+    .info__input__item {
+        font-size: 26px;
+    }
+    .info__button {
+        font-size: 26px;
+        margin-top: 20px;
+    }
+}
 /*адаптация для 992px*/
 @media (max-width: 992px) {
     .info {
