Добавлена информация в footer, добален media для блоков footer, "О компании"

--- a/css/body.css
+++ b/css/body.css
@@ -72,8 +72,9 @@
     display: flex;
 }
 .about-company_icon {
-    width: 199px;
-    height: 140px;
+    max-width: 199px;
+    width: 100%;
+    align-self: start;
 
 }
 .about-company_text {
@@ -92,10 +93,53 @@
     width: 50%;
 }
 .footer {
+    display: flex;
+    justify-content: space-evenly;
     height: 146px;
     background-color: #2F2F51;
     margin-top: 50px;
-
+    color: #FFFFFF;
+}
+.footer-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1200px;
+    max-width: 100%;
+}
+.footer-link {
+    color: #FFFFFF;
+}
+.footer-logo {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.footer-links {
+    display: flex;
+    gap: 20px;
+    font-size: 14px;
+}
+.footer-link:hover {
+    color: #EF7F04;
+}
+@media (max-width: 1100px) {
+    .footer {
+        margin-top: 40px;
+    }
+    .footer-info {
+        margin: 0 56px;
+    }
+    .about-company_description {
+        display: block;
+    }
+    .about-company_icon {
+        margin-bottom: 20px;
+    }
+    .about-company_text {
+       padding-left: 70px;
+        padding-top: 50px;
+    }
 }
 .advantage {
     display: flex;
